# rules_kustomize

./: .bazelrc  .travis.yaml  .travis.yml  README.md  WORKSPACE
examples/: BUILD.bazel  kustomization.yaml
examples/init/: BUILD.bazel
kustomize/: BUILD.bazel  build.bzl  init.bzl  repositories.bzl  version.bzl  version_test.bzl
