package(default_visibility = ["//visibility:public"])

exports_files(glob(["*.bzl"]) + [
    "kustomize-init.sh.tpl",
])

config_setting(
    name = "linux_amd64",
    values = {
        "cpu": "k8",
    },
)

config_setting(
    name = "darwin_amd64",
    values = {
        "cpu": "darwin",
    },
)

genrule(
    name = "kustomize_runtime",
    srcs = select({
        "//kustomize:linux_amd64": ["@kustomize_runtime_linux_amd64//file"],
        "//kustomize:darwin_amd64": ["@kustomize_runtime_darwin_amd64//file"],
    }),
    outs = ["bin/kustomize"],
    cmd = "cp $(<) $(@)",
    executable = True,
    output_to_bindir = 1,
)
