package(default_visibility = ["//visibility:public"])

exports_files(glob(["*.bzl"]))

config_setting(
    name = "linux_amd64",
    values = {
        "cpu": "k8",
    },
)

config_setting(
    name = "darwin_amd64",
    values = {
        "cpu": "darwin",
    },
)

genrule(
    name = "bin",
    srcs = select({
        "//kustomize:linux_amd64": ["@kustomize_runtime_linux_amd64//file"],
        "//kustomize:darwin_amd64": ["@kustomize_runtime_darwin_amd64//file"],
    }),
    outs = ["kustomize"],
    cmd = "cp $(<) $(@)",
    executable = True,
    output_to_bindir = 1,
)

load(":version.bzl", "kustomize_version")

kustomize_version(
    name = "version",
)

load(":version_test.bzl", "build_test_suite")

# Call a macro that defines targets that perform the tests at analysis time,
# and that can be executed with "bazel test" to return the result.
build_test_suite()
